feat: redesign deep ocean e barra lateral minimalista

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
     <style>
         body {
             font-family: 'Montserrat', 'Inter', sans-serif;
-            background-color: #12151D; /* Mais claro que #0E1117 para um visual menos opressor */
-            color: white;
+            background-color: #0B0E14; 
+            color: #E2E8F0;
             margin: 0;
             overflow-x: hidden;
         }
         ::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
+            width: 6px;
+            height: 6px;
         }
         ::-webkit-scrollbar-track {
-            background: rgba(25, 29, 36, 0.5); /* Ajustado para nova cor de fundo */
+            background: #0B0E14;
         }
         ::-webkit-scrollbar-thumb {
-            background: linear-gradient(135deg, #8B5CF6, #06B6D4);
-            border-radius: 4px;
+            background: linear-gradient(180deg, #22D3EE, #0891B2);
+            border-radius: 10px;
         }
         .glass {
-            /* Ajustado para ser mais leve e etéreo */
-            background: rgba(18, 21, 29, 0.6); 
-            backdrop-filter: blur(15px); /* Menos blur para sensação mais "snappy" */
-            -webkit-backdrop-filter: blur(15px);
-            border: 1px solid rgba(139, 92, 246, 0.1); /* Borda mais sutil */
+            background: rgba(15, 23, 42, 0.6);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            border: 1px solid rgba(34, 211, 238, 0.1);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
         }
     </style>
     <!-- Bibliotecas de PDF carregadas globalmente -->
