feat: atualizações em StudyForm e KPICard

--- a/index.html
+++ b/index.html
@@ -1,51 +1,161 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MonitorPro</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Montserrat', 'Inter', sans-serif;
-            background-color: #0B0E14; 
-            color: #E2E8F0;
-            margin: 0;
-            overflow-x: hidden;
-        }
-        ::-webkit-scrollbar {
-            width: 6px;
-            height: 6px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #0B0E14;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: linear-gradient(180deg, #22D3EE, #0891B2);
-            border-radius: 10px;
-        }
-        .glass {
-            background: rgba(15, 23, 42, 0.6);
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
-            border: 1px solid rgba(34, 211, 238, 0.1);
-            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
-        }
-    </style>
-    <!-- Bibliotecas de PDF carregadas globalmente -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
-    <!-- PDF.js para renderização de PDFs -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-    <script>
-      // Configura o worker para o pdf.js
-      if (typeof pdfjsLib !== 'undefined') {
-        pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
-      }
-    </script>
-    
-<script type="importmap">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MonitorPro</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Montserrat:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet">
+  <style>
+    :root {
+      /* Deep Ocean Premium (Dark) */
+      --bg-main: 222 47% 4%;
+      --bg-sidebar: 222 47% 2%;
+      --bg-card: 222 47% 8% / 0.6;
+      --bg-user-block: 217 33% 17% / 0.4;
+      --text-main: 215 20% 65%;
+      --text-muted: 215 16% 47%;
+      --text-bright: 210 40% 98%;
+      --accent: 188 86% 53%;
+      /* Cyan Neon */
+      --accent-secondary: 262 83% 58%;
+      /* Purple Glow */
+      --accent-glow: 188 86% 53% / 0.15;
+      --border: 188 86% 53% / 0.1;
+      --shadow: 0 10px 40px -10px rgba(0, 0, 0, 0.5);
+      --glass-blur: 16px;
+    }
+
+    .light {
+      /* Premium Pearl (Luxury Light) */
+      --bg-main: 222 47% 98%;
+      --bg-sidebar: 222 47% 100%;
+      --bg-card: 222 47% 100% / 0.7;
+      --bg-user-block: 222 47% 94%;
+      --text-main: 222 47% 15%;
+      --text-muted: 222 30% 45%;
+      --text-bright: 222 47% 10%;
+      --accent: 188 91% 35%;
+      --accent-secondary: 262 70% 45%;
+      --accent-glow: 188 91% 35% / 0.12;
+      --border: 222 47% 10% / 0.06;
+      --shadow: 0 15px 45px -15px rgba(15, 23, 42, 0.12);
+      --glass-blur: 24px;
+    }
+
+    body {
+      font-family: 'Montserrat', 'Inter', sans-serif;
+      background-color: hsl(var(--bg-main));
+      color: hsl(var(--text-main));
+      overflow-x: hidden;
+      min-height: 100vh;
+      -webkit-font-smoothing: antialiased;
+      transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+      position: relative;
+    }
+
+    /* Textura de Ruído (Noise) Sutil */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0.015;
+      pointer-events: none;
+      z-index: 9999;
+      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3BaseFilter id='filter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/baseFilter%3E%3Crect width='100%25' height='100%25' filter='url(%23filter)'/%3E%3C/svg%3E");
+    }
+
+    .glass {
+      background: hsl(var(--bg-card));
+      backdrop-filter: blur(var(--glass-blur));
+      -webkit-backdrop-filter: blur(var(--glass-blur));
+      border: 1px solid hsl(var(--border));
+      box-shadow: var(--shadow);
+    }
+
+    .glass-premium {
+      background: linear-gradient(135deg, hsl(var(--bg-card)) 0%, rgba(255, 255, 255, 0.02) 100%);
+      backdrop-filter: blur(var(--glass-blur));
+      border: 1px solid hsl(var(--border));
+      position: relative;
+    }
+
+    .glass-premium::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 50%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.03), transparent);
+      transition: 0.5s;
+    }
+
+    .glass-premium:hover::after {
+      left: 100%;
+    }
+
+    .text-gradient {
+      background: linear-gradient(to right, hsl(var(--accent)), hsl(var(--accent-secondary)));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    ::-webkit-scrollbar {
+      width: 6px;
+      height: 6px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: var(--bg-main);
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: linear-gradient(180deg, var(--accent), #0891B2);
+      border-radius: 10px;
+    }
+
+    .glass {
+      background: var(--bg-card);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border: 1px solid var(--border);
+      box-shadow: 0 8px 32px 0 var(--shadow);
+      transition: all 0.3s ease;
+    }
+
+    /* Utilitários de cor baseados em variáveis */
+    .text-accent {
+      color: var(--accent);
+    }
+
+    .bg-accent {
+      background-color: var(--accent);
+    }
+
+    .border-accent {
+      border-color: var(--border);
+    }
+  </style>
+  <!-- Bibliotecas de PDF carregadas globalmente -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.min.js"></script>
+  <!-- PDF.js para renderização de PDFs -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script>
+    // Configura o worker para o pdf.js
+    if (typeof pdfjsLib !== 'undefined') {
+      pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.worker.min.js';
+    }
+  </script>
+
+  <script type="importmap">
 {
   "imports": {
     "@google/genai": "https://esm.sh/@google/genai",
@@ -62,8 +172,10 @@
 }
 </script>
 </head>
+
 <body>
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
