--- a/index.html
+++ b/index.html
@@ -57,19 +57,6 @@
       position: relative;
     }
 
-    /* Textura de Ruído (Noise) Sutil */
-    body::before {
-      content: "";
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.015;
-      pointer-events: none;
-      z-index: 9999;
-      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3BaseFilter id='filter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/baseFilter%3E%3Crect width='100%25' height='100%25' filter='url(%23filter)'/%3E%3C/svg%3E");
-    }
 
     .glass {
       background: hsl(var(--bg-card));
@@ -86,24 +73,11 @@
       position: relative;
     }
 
-    .glass-premium::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 50%;
-      height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.03), transparent);
-      transition: 0.5s;
-    }
-
-    .glass-premium:hover::after {
-      left: 100%;
-    }
 
     .text-gradient {
       background: linear-gradient(to right, hsl(var(--accent)), hsl(var(--accent-secondary)));
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
     }
 
